--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/HerbBenchmark.jl"]
 	path = lib/HerbBenchmark.jl
 	url = https://github.com/Herb-AI/HerbBenchmarks.jl.git
+[submodule "lib/HerbConstraints.jl"]
+	path = lib/HerbConstraints.jl
+	url = https://github.com/Herb-AI/HerbConstraints.jl.git
